--- a/backend/package.json
+++ b/backend/package.json
@@ -2,20 +2,19 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "dist/server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc -b",
     "start": "node dist/server.js",
-    "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
-    "postinstall": "npm run build"
+    "dev": "ts-node-dev --respawn --transpile-only src/server.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "engines": {
-    "node":">=16.0.0",
-    "npm":">=7.0.0"
+    "node": ">=16.0.0",
+    "npm": ">=7.0.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
