--- a/backend/package.json
+++ b/backend/package.json
@@ -30,11 +30,14 @@
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "buffer-equal-constant-time": "^1.0.1",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
+    "jwa": "^2.0.1",
+    "jws": "^4.0.0",
     "mongodb": "^6.17.0",
     "mongoose": "^8.14.1",
     "zod": "^3.24.3"
